# OpenClimate-pyclient

./: .readthedocs.yml  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: tests.yml
_tmp/: basics.ipynb  country_emissions.ipynb
docs/: api.rst  authors.rst  conf.py  contributing.rst  environment.yml  index.rst  usage.rst
docs/_static/css/: custom.css
docs/notebooks/: canada_breakdown.ipynb  canada_target_gap.ipynb  cumulative_emissions.ipynb  emissions_and_emissions_per_capita.ipynb  great_britain_emissions.ipynb
notebooks/: cumulative_emissions.ipynb  example_GB_emissions.ipynb
src/oc_pyclient/: __init__.py  oc_pyclient.py
src/oc_pyclient.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/openclimate/: ActorOverview.py  Base.py  Client.py  Emissions.py  GDP.py  Population.py  Search.py  Targets.py  __init__.py  openclimate.py  utils.py
src/openclimate.egg-info/: PKG-INFO  requires.txt
tests/: test_Client.py
