[metadata]
name = openclimate
version = 0.1.0
description = Python client for OpenClimate API
author = Luke Gloege
license = Apache
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    openclimate
install_requires =
    pandas>1.5
    requests>2.28
python_requires = >=3.8
package_dir =
    =src
zip_safe = no