[metadata]
name = openclimate
version = 0.1.4
description = Python client for OpenClimate API
long_description = file: README.md
long_description_content_type = text/markdown
author = Luke Gloege
url = https://github.com/Open-Earth-Foundation/OpenClimate-pyclient
keywords = GHG, emissions, climate data
license = Apache
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    openclimate
install_requires =
    pandas>1.5
    requests>2.28
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160